# ProtoCatalyst

./: .gitignore  .sbtopts  .scalafix.conf  .scalafmt.conf  CLAUDE.md  README.md  ROADMAP.md  build.sbt
benchmarks/: README.md
docs/: AOT_ROADMAP.md  BENCHMARKS.md  BENCHMARK_METHODOLOGY.md  CLOUD_BENCH.md  COMPILE_TIME_DSL.md  DESIGN.md  DSL_REFERENCE.md  ENCODER_DEEP_DIVE.md  ENCODER_INTEGRATION_PLAN.md  ENCODER_PARITY.md  INFRASTRUCTURE.md  OPTIMIZER_PLAN.md  README.md  REFLECTION_REPLACEMENT.md  REPORT.md  REPORT_OUTLINE.md  REPORT_encoder_perf.md  SCALA3_SUPERSET.md  SPARK_CATALYST_REFERENCE.md  SPARK_INTEGRATION.md  SPARK_INTEGRATION_PLAN.md  SPARK_MIGRATION.md  SPARK_MIGRATION_GUIDE.md  SQL_PARSER.md
docs/compiler/: BENCHMARK_RESULTS.md  COMPILE_TIME_DSL.md  CROSS_BACKEND.md  DESIGN.md  DSL_REFERENCE.md  OPTIMIZER_PLAN.md  SPARK_CATALYST_REFERENCE.md  SPARK_TEST_PATTERNS_ANALYSIS.md  SQL_PARSER.md  TRUFFLE_BACKEND.md  TRUFFLE_EXPLORATION.md
docs/decisions/: ADR-001-no-runtime-codegen.md  ADR-002-independent-ir.md  ADR-003-protocatalyst-vs-substrait-ir.md
docs/scala3-encoder/: AOT_ROADMAP.md  BENCHMARKS.md  ENCODER_DEEP_DIVE.md  ENCODER_PARITY.md  INFRASTRUCTURE.md  MIGRATION.md  REFLECTION_REPLACEMENT.md  REPORT.md  SCALA3_SUPERSET.md
native/: .gitignore  build-tpch-native.sh
native/agent-config/: jni-config.json  reflect-config.json  (+1 more)
project/: plugins.sbt
scripts/: bench.sh  cross_arch_report.py  ec2-cross-arch.sh  gen-tpch.sh  render_report_tables.py
tools/datafusion-server/: Cargo.toml  README.md
tools/datafusion-server/src/: main.rs
(+657 files in other folders)
