[package]
name = "datafusion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "52"
datafusion-flight-sql-server = "0.4"
tokio = { version = "1", features = ["full"] }
# Used to wrap the Flight SQL service with a no-op Handshake (see src/main.rs).
arrow-flight = "57"
tonic = "0.14"
futures = "0.3"
